--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-device-detect": "^1.15.0",
+    "react-dom": "17.0.1",
+    "sass": "^1.32.0"
   }
 }
